# v1.0.4

Fix infinite loop if running with paths other than ".", or if projects are nested multiple directories deep.

# v1.0.3

Fixed image digests being truncated to "sha256:" and a single character in commit messages
Increased size of versions shown in commit messages from 8 to 12

# v1.0.2

Fixed commit messages showing old/new versions the wrong way around

# v1.0.1

Flags can be specified as env vars